# sample-partner-agents

./: README.md
CRM_Connections/hubspot/: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
CRM_Connections/hubspot/agent-backend/: README.md  esbuild.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
CRM_Connections/hubspot/agent-backend/__tests__/: agent-async.handler.test.ts  agent.handler.test.ts  config.test.ts  mcp-client.test.ts  run-agent.test.ts
CRM_Connections/hubspot/agent-backend/core/: run-agent.ts
CRM_Connections/hubspot/agent-backend/handlers/: agent-async.ts  agent.ts  shared.ts
CRM_Connections/hubspot/agent-backend/lib/: config.ts  errors.ts  hubspot-deal-context.ts  hubspot-signature.ts  job-store.ts  mcp-client.ts
CRM_Connections/hubspot/agent-card/: README.md  hsproject.json  hubspot.config.yml.example  package-lock.json  package.json  vitest.config.ts
CRM_Connections/hubspot/agent-infra/: README.md  cloudformation.yaml  deploy.sh  set-secrets.sh  smoke-agent.sh  tail-logs.sh
CRM_Connections/hubspot/backend/: README.md  esbuild.config.mjs  package-lock.json  package.json  vitest.config.ts
CRM_Connections/hubspot/backend/__tests__/: ace.test.ts  client-token.property.test.ts  config.property.test.ts  format-ace-error.test.ts  hubspot-signature.test.ts  hubspot.test.ts  payload.example.test.ts  preconditions.property.test.ts  refresh.handler.test.ts  refresh.test.ts  resolve-status.property.test.ts  run-pull.test.ts  share.handler.test.ts  share.test.ts  stage-mapping.example.test.ts  stage-mapping.property.test.ts  stage-mapping.roundtrip.property.test.ts  submission-mode.test.ts  submit.test.ts
CRM_Connections/hubspot/backend/core/: run-pull.ts  run-refresh.ts  run-share.ts  run-submit.ts
CRM_Connections/hubspot/backend/handlers/: pull.ts  refresh.ts  share.ts  shared.ts  submit.ts
CRM_Connections/hubspot/backend/lib/: ace.ts  client-token.ts  config.ts  errors.ts  hubspot.ts  (+6 more)
CRM_Connections/hubspot/docs/: architecture.md  workshop-agent.md  workshop.md
CRM_Connections/hubspot/hubspot-card/: README.md  hsproject.json  hubspot.config.yml.example  package-lock.json  package.json  tsconfig.json  vitest.config.ts
CRM_Connections/hubspot/infra/: README.md  cloudformation.yaml  deploy.sh  set-secrets.sh  tail-logs.sh  unified-deploy.sh
CRM_Connections/hubspot/scripts/: README.md  _hubspot_token.py  check-prereqs.ps1  check-prereqs.sh  create-test-deal.py  get-hubspot-token.sh  prepare-card-config.mjs  seed-aws-products-picklist.py  setup-hubspot-properties.sh  setup_ace_bidirectional_fields.py  setup_ace_picklists.py  setup_ace_solutions.py
CRM_Connections/hubspot/src/: hubspot_client.py  main.py
CRM_Connections/hubspot/tests/: conftest.py  test_main.py
(+218 files in other folders)
