[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "aws-hubspot-sync"
version = "0.1.0"
description = "HubSpot provisioning CLI for the AWS Partner Central connector"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT-0"}
authors = [
    {name = "Contributors"}
]
keywords = ["aws", "hubspot", "partner-central", "ace", "sync"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]

# `boto3` lives here because the `scripts/_hubspot_token.py` helper
# loads the HubSpot token from AWS Secrets Manager. The runtime sync
# stack is TypeScript Lambdas; this CLI is provisioning-only.
dependencies = [
    "boto3>=1.26.0",
    "requests>=2.31.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/aws-samples/sample-partner-agents/tree/main/CRM_Connections/hubspot"
Documentation = "https://github.com/aws-samples/sample-partner-agents/tree/main/CRM_Connections/hubspot#readme"
Repository = "https://github.com/aws-samples/sample-partner-agents.git"
Issues = "https://github.com/aws-samples/sample-partner-agents/issues"

[tool.black]
line-length = 120
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    ".eggs",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
